--- a/_posts/0000-01-02-lfsalazar76.md
+++ b/_posts/0000-01-02-lfsalazar76.md
@@ -1,7 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our lfsalazar76 slide!"
 ---
-Something new
-Use the left arrow to go back!
 
+Use the left arrow to go back!
