--- a/_posts/0000-01-02-lfsalazar76.md
+++ b/_posts/0000-01-02-lfsalazar76.md
@@ -2,5 +2,6 @@
 layout: slide
 title: "Welcome to our lfsalazar76 slide!"
 ---
+This is lfsalazar76  awesome slide
 
 Use the left arrow to go back!
