make line 5 more awesome

--- a/_posts/0000-01-02-lfsalazar76.md
+++ b/_posts/0000-01-02-lfsalazar76.md
@@ -2,6 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Something new
+Something new an awesome change....
 Use the left arrow to go back!
 
